fix NPE in KeYProgModelInfo.java